<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麻雀符計さん!!</string>
    <string name="mjPointTable">点数表</string>
    <string name="yakuNormal">通常役</string>
    <string name="yakuPinfu">平和</string>
    <string name="yakuChitoitsu">七対子</string>
    <string name="mentsuSelect">メンツ選択</string>
    <string name="mentsu1">メンツ①</string>
    <string name="mentsu2">メンツ②</string>
    <string name="mentsu3">メンツ③</string>
    <string name="mentsu4">メンツ④</string>
    <string name="jyanto">雀頭</string>
    <string name="jyantoRenpuhai">連風牌</string>
    <string name="jyantoYakuhai">役牌</string>
    <string name="jyantoOther">その他</string>
    <string name="machiSelect">待ち選択</string>
    <string name="machi">待ち</string>
    <string name="agari">あがり</string>
    <string name="agariFuroRon">副露ロン</string>
    <string name="agariMenzenRon">門前ロン</string>
    <string name="agariTsumo">ツモ</string>
    <string name="total">合計：</string>
    <string name="fuUnit">符</string>
    <string name="parentPoint">親の点数</string>
    <string name="childPoint">子の点数</string>
    <string name="clear">クリア</string>
    <string name="shuntsu">順子</string>
    <string name="chuncyanpai">中張牌</string>
    <string name="yaochuhai">么九牌</string>
    <string name="minko">明刻</string>
    <string name="anko">暗刻</string>
    <string name="minkan">明槓</string>
    <string name="ankan">暗槓</string>
    <string name="ok">OK</string>
    <string name="oneDel">一つ消す</string>
    <string name="del">消す</string>
    <string name="ryanmen">両面待ち</string>
    <string name="shabo">シャボ待ち</string>
    <string name="kanchan">嵌張待ち</string>
    <string name="penchan">辺張待ち</string>
    <string name="tanki">単騎待ち</string>
    <string name="hanNum">翻数</string>
    <string name="point">点数</string>
    <string name="han1">1翻</string>
    <string name="han2">2翻</string>
    <string name="han3">3翻</string>
    <string name="han4">4翻</string>
    <string name="mangan">5翻\n(満貫)</string>
    <string name="haneman">6～7翻\n(跳満)</string>
    <string name="baiman">8～10翻\n(倍満)</string>
    <string name="sanbaiman">11～12翻\n(三倍満)</string>
    <string name="yakuman">13翻～\n(役満)</string>

</resources>