<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 役選択 -->

            <RadioGroup
                android:id="@+id/radioGrpYaku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioYakuNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yakuNormal" />

                <RadioButton
                    android:id="@+id/radioYakuPinfu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yakuPinfu" />

                <RadioButton
                    android:id="@+id/radioYakuChitoitsu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yakuChitoitsu" />
            </RadioGroup>

            <!-- メンツ選択ボタン -->

            <Button
                android:id="@+id/btnMentsuSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentsuSelect" />

            <!-- 選択されたメンツ -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <!-- メンツ1 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/mentsu1" />

                    <TextView
                        android:id="@+id/textViewMentsu1Fu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/imageViewMentsu1Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/mentsu_na" />

                    <TextView
                        android:id="@+id/textViewMentsu1Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="" />
                </TableRow>

                <!-- メンツ2 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/mentsu2" />

                    <TextView
                        android:id="@+id/textViewMentsu2Fu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/imageViewMentsu2Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/mentsu_na" />

                    <TextView
                        android:id="@+id/textViewMentsu2Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="" />
                </TableRow>

                <!-- メンツ3 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/mentsu3" />

                    <TextView
                        android:id="@+id/textViewMentsu3Fu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/imageViewMentsu3Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/mentsu_na" />

                    <TextView
                        android:id="@+id/textViewMentsu3Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="" />
                </TableRow>

                <!-- メンツ4 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/mentsu4" />

                    <TextView
                        android:id="@+id/textViewMentsu4Fu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/imageViewMentsu4Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/mentsu_na" />

                    <TextView
                        android:id="@+id/textViewMentsu4Type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="" />
                </TableRow>
            </TableLayout>

            <!-- 雀頭 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/jyanto" />

                    <TextView
                        android:id="@+id/textViewJyantoFu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <RadioGroup
                        android:id="@+id/radioGrpJyanto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioJyantoRenpuhai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jyantoRenpuhai" />

                        <RadioButton
                            android:id="@+id/radioJyantoYakuhai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jyantoYakuhai" />

                        <RadioButton
                            android:id="@+id/radioJyantoOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/jyantoOther" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <!-- 待ち -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnMachiSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/machiSelect" />

                    <TextView
                        android:id="@+id/textViewMachiFu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />

                    <ImageView
                        android:id="@+id/imageViewMachiType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/machi_na" />

                    <TextView
                        android:id="@+id/textViewMachiType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="" />
                </TableRow>
            </TableLayout>

            <!-- 上がり方 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:text="@string/agari" />

                    <TextView
                        android:id="@+id/textViewAgariFu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:text="0" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioGroup
                        android:id="@+id/radioGrpAgari"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioAgariFuroRon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agariFuroRon" />

                        <RadioButton
                            android:id="@+id/radioAgariMenzenRon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agariMenzenRon" />

                        <RadioButton
                            android:id="@+id/radioAgariTsumo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/agariTsumo" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <!-- 符表示 -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/total"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewTotalFu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="34"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fuUnit"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
            </TableLayout>

            <!-- 点数表示ボタン、クリアボタン -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnParentPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/parentPoint" />

                    <Button
                        android:id="@+id/btnChildPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/childPoint" />

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:text="@string/clear" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>