<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewPointInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/smokewhite"
                android:paddingLeft="1dp"
                android:paddingTop="1dp" >

                <!-- 満貫以下見出し -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/hanNum" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/han1" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/han2" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/han3" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/han4" >
                    </TextView>
                </TableRow>

                <!-- 満貫以下 得点 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/point" >
                    </TextView>

                    <TextView
                        android:id="@+id/textView1han"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textView2han"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textView3han"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textView4han"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="" >
            </TextView>

            <!-- 満貫以上 見出し -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/smokewhite"
                android:paddingLeft="1dp"
                android:paddingTop="1dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/mangan" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/haneman" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/baiman" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/sanbaiman" >
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="@string/yakuman" >
                    </TextView>
                </TableRow>

                <!-- 満貫以上 得点 -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewMangan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textViewHaneman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textViewBaiman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textViewSanbaiman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>

                    <TextView
                        android:id="@+id/textViewYakuman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/background"
                        android:gravity="center"
                        android:text="" >
                    </TextView>
                </TableRow>

                <!-- 終わり -->

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>